# v4l_opencv_wrapper_yocto

./: README.txt  configure.ac
src/: Makefile.am  camera_test.c  v4l_wrapper.c
